# fastapi-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: dev-project-template.yml  dev-project.sh
{{ cookiecutter.project_slug }}/: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  example.env  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/alembic/: env.py
{{ cookiecutter.project_slug }}/configuration.run/: Celery.run.xml  Serve.run.xml
{{ cookiecutter.project_slug }}/docker/backend/: Dockerfile
{{ cookiecutter.project_slug }}/docker/celeryworker/: worker-start.sh
{{ cookiecutter.project_slug }}/docker/fileproxy/: nginx.conf
{{ cookiecutter.project_slug }}/docker/redis/: redis.conf
{{ cookiecutter.project_slug }}/src/: __main__.py  background.py  cache.py  config.py  database.py  dependencies.py  main.py  manage.py  sentry.py  tasks.py
{{ cookiecutter.project_slug }}/src/api/: router.py
{{ cookiecutter.project_slug }}/src/api/v1/auth/: schemas.py  services.py  views.py
{{ cookiecutter.project_slug }}/src/api/v1/files/: repositories.py  services.py  validators.py  views.py
{{ cookiecutter.project_slug }}/src/api/v1/healthcheck/: config.py  schemas.py  service.py  views.py
{{ cookiecutter.project_slug }}/src/api/v1/users/: models.py  repositories.py  schemas.py  services.py  views.py
{{ cookiecutter.project_slug }}/src/commands/: __init__.py  base.py  file_cleaner.py  schedule.py
{{ cookiecutter.project_slug }}/src/sdk/: models.py  ordering.py  pagination.py  repositories.py  responses.py  schemas.py  utils.py
{{ cookiecutter.project_slug }}/src/sdk/exceptions/: exception_handler_mapping.py  exceptions.py  handlers.py  helpers.py
{{ cookiecutter.project_slug }}/tests/: common.py  conftest.py  utils.py
